# Deepl_translator

./: Dockerfile  README.md  config.py  db.py  docker-compose.yml  main.py  pyproject.toml  translator.py
