[tool.poetry]
name = "deepl_translator"
version = "0.1.0"
description = "requirements for telegram bot"
authors = ["maxpurrp <seminm041@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.1.1"
deep-translator = "^1.11.4"
pymysql = "^1.1.0"
deepl = "^1.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
